todeploy-kubernetes/torrent/couchpotato/couchpotato.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchpotato
  namespace: torrent
  labels:
    app: couchpotato
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchpotato
  template:
    metadata:
      labels:
        app: couchpotato
    spec:
      volumes:
        - name: couchpotato-config-volume
          persistentVolumeClaim:
            claimName: couchpotato-config-claim
      containers:
      - name: couchpotato
        image: linuxserver/couchpotato
        ports:
        - name: http
          containerPort: 5050
        volumeMounts:
          - name: couchpotato-config-volume
            mountPath: /config
        #   - name: couchpotato-config-volume
        #     mountPath: /config/couchpotato/couchpotato.conf
        #     subPath: couchpotato.conf
        #   - name: set-goose-config-volume
        #     mountPath: /goose/set-goose.sh
        #     subPath: set-goose.sh
        #   - name: set-goose-ovpn-volume
        #     mountPath: /etc/openvpn/ro-10.conf
        #     subPath: ro-10.conf
        #   - name: goose-credentials-volume
        #     mountPath: /goose/login.conf
        #     subPath: login.conf
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: couchpotato
  name: couchpotato
  namespace: torrent
spec:
  ports:
  - name: http
    targetPort: 5050
    port: 80
  selector:
    app: couchpotato
  type: ClusterIP

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: couchpotatoingress
#   namespace: torrent
# spec:
#   rules:
#   - host: couch.bas
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: couchpotato
#             port:
#               number: 80


---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: couch-non-tls
  namespace: torrent
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`couch.bas`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: couchpotato
      port: 80
    middlewares:
    - name: http-redirect-to-https
      namespace: traefik
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: couch-tls
  namespace: torrent
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`couch.bas`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: couchpotato
      port: 80
  tls:
    secretName: couch-bas-tls
